# report2image

./: .env.example  .gitignore  AGENTS.md  README.md  cli.py  client.py  config.py  processor.py  prompts.py  pyproject.toml  requirements.txt  run_web.py
archive/legacy-node-test/: api-test.py  package-lock.json
docs/: image_evaluation_plan.md  project_plan_and_status.md  research_proposal.md  retrospective_batch_manual.md  statistical_analysis_plan.md  technical_architecture_for_manuscript.md
docs/decisions/: ADR-001-paired-experiment-contract.md
launcher/: NanoBananaPETCTLauncher.cs
petct/: __init__.py  data.py  display_plan.py  evaluation.py  experiment.py  generation.py  laterality.py  model_catalog.py  provenance.py  provider_config.py  providers.py  question_service.py  questions.py
scripts/: README.md  start_web.ps1
scripts/analysis/: run_statistical_analysis.py
scripts/datasets/: create_evaluation_dataset.py  select_complex_cases.py  select_complex_cases_full.py
scripts/experiments/: export_paired_results.py  run_paired_experiment.py
scripts/questions/: export_questions_to_excel.py  (+2 more)
settings/: providers.json
tests/: test_core_utils.py  test_display_plan.py  test_evaluation.py  test_experiment.py  test_experiment_cli.py  test_generation_pipeline.py  test_laterality.py  test_model_catalog.py  test_prompts.py  test_provider_config.py  test_providers.py  test_question_service.py  test_statistical_analysis.py  test_webapp.py
tools/: __init__.py  build_windows_launcher.ps1  delete_images.py  sync_history.py
webapp/: __init__.py  main.py
(+4 files in other folders)
