[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "petct-visualization-study"
version = "0.1.0"
description = "Reproducible PET-CT patient-friendly visualization research workflow"
requires-python = ">=3.11,<3.14"
dependencies = [
  "aiohttp==3.13.2",
  "fastapi==0.138.0",
  "numpy==2.3.5",
  "openai==2.38.0",
  "openpyxl==3.1.5",
  "pandas==2.3.3",
  "pingouin==0.5.5",
  "pydantic==2.12.5",
  "python-dotenv==1.2.1",
  "scipy==1.16.3",
  "statsmodels==0.14.5",
  "tqdm==4.67.1",
  "uvicorn==0.49.0",
]

[tool.setuptools.packages.find]
include = ["petct*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
